[tool.poetry]
name = "opticalflowtracking"
version = "1.0.0"
description = "This contains two programs with vehicular tracking based the sparse and dense optical flow algorithms of Lucas-Kanade and Gunnar-Farneback."
authors = ["Anmjeet Gill"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
numpy = "^1.24.2"
opencv-contrib-python = "^4.7.0.72"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
